[package]
name = "near-plugins"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitflags.workspace = true
near-sdk.workspace = true
near-plugins-derive = { path = "../near-plugins-derive/", version = "0.5.3" }
serde.workspace = true

[dev-dependencies]
near-sdk = { workspace = true, features = ["unit-testing"] }
